<resources>
    <string name="app_name">Coffee Ordering</string>
    <string name="coffee_image">coffee2b.png</string>
    <string name="choose">Choose Toppings:</string>
    <string name="quantity">Quantity</string>
    <string name="summary">Order Summary</string>
    <string name="cream">Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantity_num">0</string>
    <string name="order_sum">Order summary will appear</string>
    <string name="order_button">Order</string>
</resources>